update frontend design bug fixes

--- a/static/index.html
+++ b/static/index.html
@@ -612,7 +612,7 @@
             <p>Enhanced with LaTeX rendering and smart image processing</p>
             <div class="developer-badge">
                 <i class="bi bi-code-slash"></i>
-                Developed by MR ATIK
+                Developed by Mizanur Rahman
             </div>
         </div>
     </header>
